More padding below the whole app - so that the delete dropdown can reach going down. Dropdown overflow-y is now “overlay”. The “visible” option ended up cutting the visibility of dropdowns in some cases. Extra constraint on when to delete every module when codeText = “” - codeText is blank during the editing/preview of the first module (not just when toggling between Textbox/PDF options). So if we are editing the first module, the current JSX module array should NOT be deleted - this is now fixed.

--- a/client/src/components/parse-function-container/parse-function-container.css
+++ b/client/src/components/parse-function-container/parse-function-container.css
@@ -1,5 +1,5 @@
 ul.dropdown-content{
-    overflow-y: visible !important;
+    overflow-y: overlay;
 }
 
 div.module-dropdown-list.row{
