--- a/client/src/components/parseit-container/parseit-container.css
+++ b/client/src/components/parseit-container/parseit-container.css
@@ -1,7 +1,7 @@
 div.parseit-content {
     padding-left: 5%;
     padding-right: 5%;
-    padding-bottom: 100px;
+    padding-bottom: 200px;
 }
 
 div.preview-text {
